--- a/##source/scss/base/_fonts.scss
+++ b/##source/scss/base/_fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: 'icomoon';
 	src:
-		 url('fonts/icomoon.ttf') format('truetype'),
-		 url('fonts/icomoon.woff') format('woff'),
-		 url('fonts/icomoon.svg') format('svg');
+		 url('../fonts/icomoon.ttf') format('truetype'),
+		 url('../fonts/icomoon.woff') format('woff'),
+		 url('../fonts/icomoon.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
@@ -24,13 +24,13 @@
 }
 
 
-// .icon-dot:before {
-// 	content: "\e902";
-// }
-// .icon-arrow-left:before {
-// 	content: "\e900";
-// }
+.icon-dot:before {
+	content: "\e902";
+}
+.icon-arrow-left:before {
+	content: "\e900";
+}
 
-// .icon-arrow-right:before {
-// 	content: "\e901";
-// }
+.icon-arrow-right:before {
+	content: "\e901";
+}
